instead (1.8.2-1) unstable; urgency=low

  * New upstream release (Closes: #664587).
  * Removed linking patch as it's not necessary (fixed upstream).
  * Added copyright for games/tutorial3/sv_ttt.xm.
  * Added missed copyright for themes/default/sans*.ttf.
  * Added patch fixes desktop entry.

 -- Sam Protsenko <joe.skb7@gmail.com>  Tue, 15 Jan 2013 00:24:00 +0200

instead (1.6.1-1) unstable; urgency=low

  * Fixed build for Hurd.

 -- Sam Protsenko <joe.skb7@gmail.com>  Thu, 19 Jan 2012 15:09:11 +0200

instead (1.6.0-1) unstable; urgency=low

  * Initial release (Closes: #641307).

 -- Sam Protsenko <joe.skb7@gmail.com>  Sun, 15 Jan 2012 17:02:02 +0200