@@ -2,7 +2,7 @@ Source: instead
 Section: games
 Priority: optional
 Maintainer: Sam Protsenko <joe.skb7@gmail.com>
-Build-Depends: debhelper (>= 8.0.0), dpkg-dev (>= 1.16.1~), pkg-config, liblua5.1-dev, libsdl1.2-dev, libsdl-ttf2.0-dev, libsdl-image1.2-dev, libsdl-mixer1.2-dev, zlib1g-dev, libgtk2.0-dev
+Build-Depends: debhelper (>= 8.0.0), dpkg-dev (>= 1.16.1~), pkg-config, liblua5.1-dev, libsdl1.2-dev, libsdl-ttf2.0-dev, libsdl-image1.2-dev, libsdl-mixer1.2-dev, zlib1g-dev, libgtk2.0-dev, fonts-liberation
 Standards-Version: 3.9.3
 Homepage: http://instead.googlecode.com
 
